# kojimaTweet

./: .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS_AND_IMPROVEMENTS.md  Dockerfile  FORMATTING_GUIDE.md  FUTURE_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SETUP_INSTRUCTIONS.md  docker-compose.yml  index.js  kojimaReview.py  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: __init__.py  settings.py
src/: __init__.py  main.py
src/analyzers/: __init__.py  movie_analyzer.py
src/api/: __init__.py  twitter_client.py
src/utils/: __init__.py  cache.py  logger.py
tests/: __init__.py  test_analyzer.py  test_cache.py
